# SeededImageSegmentationProject

./: .gitignore  CMakeLists.txt  README.md  SeededImageSegmentationProject.pro  main.cpp
Common/: imagetypeconverter.h  neighbourhood.cpp  neighbourhood.h  neighbourhoodfactory.cpp  neighbourhoodfactory.h  segmentationutility.h
Communication/: segmentationeventhandler.cpp  segmentationeventhandler.h  segmentationthread.cpp  segmentationthread.h
Exceptions/: exception.cpp  exception.h  mathexception.cpp  mathexception.h  userinputexception.cpp  userinputexception.h
GUI/: application.cpp  displaywindow.cpp  displaywindow.h  mainwindow.cpp  mainwindow.h  seedinputwindow.cpp  seedinputwindow.h
MathTools/: seededsegmentation.cpp  seededsegmentation.h
SIS-Daudt_Bernal/: SIS-Daudt_Bernal.pro  displaywindow.cpp  displaywindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: buildTargets.cmake  compilerDefOpt.cmake  findDependencies.cmake  printInfo.cmake
doxyfile/: doxyconfig  main-page.dox
doxyfile/html/: annotated.html  application_8h_source.html  classApplication-members.html  classApplication.html  classDisplayWindow-members.html  classDisplayWindow.html  classException-members.html  classException.html  classImageTypeConverter-members.html  classImageTypeConverter.html  classMainWindow-members.html  classMainWindow.html  classMathException-members.html  classMathException.html  classNeighbourhood-members.html  classNeighbourhood.html  classNeighbourhoodFactory-members.html  classNeighbourhoodFactory.html  classSeedInputWindow-members.html  classSeedInputWindow.html  classSeededSegmentation-members.html  classSeededSegmentation.html  classSegmentationEventHandler-members.html  classSegmentationEventHandler.html  classSegmentationThread-members.html  classSegmentationThread.html  classSegmentationUtility-members.html  classSegmentationUtility.html  classUi_1_1MainWindow-members.html  classUi_1_1MainWindow.html  classUi__MainWindow-members.html  classUi__MainWindow.html  classUserInputException-members.html  classUserInputException.html  classes.html  dir_53adf0b982dc8545998aae3f283a5a58.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6d2104db64b91953bbd7b8fedbb8a094.html  dir_6e33d6500a76933db4361f663e54ab12.html  dir_99d0482cf009f9d97a0877749b817f19.html  (+24 more)
doxyfile/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+7 more)
doxyfile/latex/: annotated.tex  classApplication.eps  classApplication.tex  classDisplayWindow.eps  classDisplayWindow.tex  classException.eps  classException.tex  classImageTypeConverter.tex  classMainWindow.tex  classMathException.eps  classMathException.tex  classNeighbourhood.tex  classNeighbourhoodFactory.tex  classSeedInputWindow.eps  classSeedInputWindow.tex  classSeededSegmentation.tex  classSegmentationEventHandler.eps  classSegmentationEventHandler.tex  classSegmentationThread.eps  classSegmentationThread.tex  classSegmentationUtility.tex  classUi_1_1MainWindow.tex  classUi__MainWindow.tex  classUserInputException.eps  classUserInputException.tex  dir_53adf0b982dc8545998aae3f283a5a58.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_6d2104db64b91953bbd7b8fedbb8a094.tex  dir_6e33d6500a76933db4361f663e54ab12.tex  dir_99d0482cf009f9d97a0877749b817f19.tex  dir_bf675e16ed2035949598287754f13f6b.tex  dir_fdedb0aba14d44ce9d99bc100e026e6a.tex  hierarchy.tex  index.tex  md__home_jose_Documents_SeededImageSegmentationProject_README.tex  refman.tex
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  imagetypeconverter.cpp  neighbourhood.h  neighbourhoodfactory.h  segmentationutility.cpp  segmentationutility.h
src/communication/: CMakeLists.txt  segmentationeventhandler.cpp  segmentationeventhandler.h  segmentationthread.cpp  segmentationthread.h
src/exceptions/: CMakeLists.txt  exception.h  mathexception.h  userinputexception.h
src/gui/: CMakeLists.txt  application.h  displaywindow.cpp  displaywindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  seedinputwindow.cpp  seedinputwindow.h
src/mathtools/: CMakeLists.txt  seededsegmentation.h
test/: CMakeLists.txt
test/src/: CMakeLists.txt
test/src/unit/: CMakeLists.txt
test/src/unit/mathtools/: test_mathtools.cpp
